Fixed warnings, path.of, placeholders